<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_quick"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:checked="true"
            android:title="@string/nav_all" />
        <item
            android:id="@+id/nav_starred"
            android:title="@string/nav_starred" />
    </group>

    <item android:title="@string/nav_section_manage">
        <menu>
            <group android:id="@+id/group_manage">
                <item
                    android:id="@+id/nav_manage_feeds"
                    android:title="@string/nav_manage_feeds" />
                <item
                    android:id="@+id/nav_manage_tags"
                    android:title="@string/nav_manage_tags" />
            </group>
        </menu>
    </item>

    <group android:id="@+id/group_app">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/title_about" />
    </group>

</menu>