<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_star"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/action_star"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_toggle_read"
        android:title="@string/action_mark_unread"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_browser"
        android:title="@string/action_open_browser"
        app:showAsAction="never" />

</menu>